AUTOMAKE_OPTIONS=no-dependencies

IDLC=@top_srcdir@/popccpp

include_HEADERS=paroc_base.h paroc_array.h paroc_list.h paroc_utils.h paroc_od.h paroc_string.h\
	debug.h paroc_sys.h paroc_system.h paroc_mutex.h paroc_thread.h  paroc_buffer.h paroc_buffer_utils.h priolist.h\
	paroc_accesspoint.h  paroc_event.h paroc_memspool.h\
	paroc_combox.h popc_combox_mpi.h popc_connection_mpi.h paroc_combox_socket.h paroc_combox_factory.h \
	paroc_buffer_factory.h paroc_buffer_factory_finder.h\
	paroc_buffer_xdr_factory.h paroc_buffer_xdr.h\
	paroc_buffer_raw.h paroc_buffer_raw_factory.h\
	paroc_exception.h sysinfodef.h\
	paroc_broker.h paroc_broker_factory.h paroc_object.h paroc_interface.h paroc_allocobj.h timer.h\
	popwayback.h nodethread.h request.h explorationList.h response.h popc_search_node_info.h POPString.h popc_logger.h